--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist/frontend"
+    "deploy": "gh-pages -d dist/frontend",
+    "netlify-build": "npm ci && npm run build && echo 'Build completed'"
   },
   "prettier": {
     "printWidth": 100,
